[package]
name = "speckmeter"
version = "0.1.0"
authors = ["Max Krummenacher <maxkrummenacher@bluewin.ch>"]
edition = "2021"
rust-version = "1.60"


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
itertools = "0.10.5"
image = "0.24.4"
log = "0.4.17"
v4l = "0.13.0"
once_cell = "1.15.0"
tracing-subscriber = "0.3"


[profile.release]
opt-level = 2 
