[package]
name = "speckmeter"
version = "0.1.0"
authors = ["Max Krummenacher <maxkrummenacher@bluewin.ch>"]
edition = "2021"
rust-version = "1.60"


[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
itertools = "0.10.5"
image = "0.24"
log = "0.4.17"
once_cell = "1.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3"
line_drawing = "1.0.0"
chrono = "0.4.23"
native-dialog = "0.6.3"
home = "0.5.4"
nokhwa = { version = "0.10.1", features = ["input-native"] }


[profile.release]
opt-level = 2 
